# ankigen

./: .gitignore  README.md  main.py  pyproject.toml
ankigen/: __init__.py  anki_connect.py  audio.py  cli.py  formatting.py  ipa.py  vocab.py
prompts/: book-extract.md  prompt1.md  vocabulary-extract.md  youtube-sub-extract.md  youtube-sub-prompt.md
