[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankigen"
version = "0.1.0"
description = "Generate Anki cards from a vocabulary JSON file via AnkiConnect."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["gtts"]
scripts = { generate_vocab_cards = "ankigen.cli:main" }
